# PhD-Joint-Action-RL

./: .gitignore  CMakeLists.txt  README.md  install.sh  package.xml  setup.py
docs/: theoretical_execution.md
src/cpp_node/: robot_execution_node.cpp
src/python_node/: human_robot_rl_node.py
src/visualization/: visualization_code.py
